manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsp-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - clients.api.deltacapita.com
    secretName: dsp-capita-cert-tls
  rules:
  - host: clients.api.deltacapita.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dsp-api
            port:
              number: 80
